# python-web3-toolbox

./: .gitignore  .pre-commit-config.yaml  README.md  basic.py  bookmark.py  cfg.py  date_helper.py  erc20.py  erc_instance.py  llama.py  main.py  path.py  pyproject.toml  requirements.txt  setup.py  setup.sh  setup.zsh  user_config.py  w3.py  web3_instance.py
abis/avax/: JoeLBRouter.json
abis/common/: ERC20.json
configs/: bookmark_llama_protocol.json  bookmarks.json  config.ini  config.py  llama_protocol_bookmark.json  llama_protocol_lists.json  networks.json  wallet.json
configs/tokens/: avax.json
scripts/: setup.sh  setup.zsh
src/cli/: basic.py  cfg.py  erc20.py  llama.py  main.py  user_config.py  w3.py
src/configs/: bookmarks.json  config.py  wallet.json
src/configs/tokens/: avax.json
src/constants/: path.py
src/core/: erc_instance.py  uniswap_v2.py  web3_instance.py
src/scripts/: setup.sh  setup.zsh
src/utils/: contract.py  defillama.py  explorer.py  rq.py
utils/: contract.py  defillama.py  defillama_API.py  explorer.py  manage_json.py  rq.py
